--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-image": "^4.0.3",
+    "react-infinite-scroller": "^1.2.5",
     "react-masonry-component": "^6.3.0",
     "react-scroll-horizontal": "^1.6.6",
     "react-spring": "^9.4.2",
