--- a/package.json
+++ b/package.json
@@ -56,10 +56,17 @@
     "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^6.10.3",
+    "eslint-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "javascript-obfuscator": "^4.0.0",
     "mocha": "^8.2.1",
+    "node-polyfill-webpack-plugin": "^2.0.0",
     "prettier": "2.5.1",
-    "webpack": "^2.7.0"
+    "terser-webpack-plugin": "^5.3.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
   },
   "scripts": {
     "start": "node .",
