--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.7.1",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-image": "^4.0.3",
