removing react-router-dom from index.html

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-image": "^4.0.3",
     "react-infinite-scroller": "^1.2.5",
     "react-masonry-component": "^6.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scroll-horizontal": "^1.6.6",
     "react-spring": "^9.4.2",
     "react-use-gesture": "^9.1.3",
