Rate limit, helmet csp and nonce as middleware

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express-rate-limit": "^5.5.1",
     "fs-extra": "^8.1.0",
     "fspath": "^0.15.0",
+    "helmet": "^6.0.0",
+    "helmet-csp": "^3.4.0",
     "knex": "^0.21.19",
     "local-storage": "^1.4.2",
     "lodash": "^4.17.21",
