--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@ethersproject/contracts": "^5.1.0",
+    "@material-ui/core": "^4.12.4",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cli-spinner": "^0.2.10",
@@ -71,7 +72,7 @@
   },
   "scripts": {
     "start": "node .",
-    "start:dev": "NODE_ENV=development node .",
+    "start:dev": "npm run build && NODE_ENV=development node .",
     "build": "webpack",
     "format": "npx prettier --write .",
     "lint": "npm run lint:client && npm run lint:server",
