--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "Francesco Sullo <francesco@sullo.co>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@ethersproject/contracts": "^5.1.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.11.7",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cli-spinner": "^0.2.10",
