--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.7",
     "@mui/system": "^5.11.7",
+    "@superpowerlabs/salus": "0.1.0-beta.1",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cli-spinner": "^0.2.10",
