--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@ethersproject/contracts": "^5.1.1",
-    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.7",
     "@mui/system": "^5.11.7",
     "@superpowerlabs/salus": "0.1.0-beta.1",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cli-spinner": "^0.2.10",
+    "compression-webpack-plugin": "^10.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
@@ -73,7 +73,9 @@
     "mocha": "^8.3.2",
     "node-polyfill-webpack-plugin": "^2.0.0",
     "prettier": "2.5.1",
+    "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^4.10.0"
   },
   "scripts": {
