--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
+    "webpack-deadcode-plugin": "^0.1.17",
     "webpack-merge": "^5.8.0"
   },
   "scripts": {
