--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ethereumjs-util": "^7.0.10",
     "ethers": "^5.5.2",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.1.7",
     "file-loader": "^6.2.0",
     "fs-extra": "^8.1.0",
     "knex": "^2.4.2",
