--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "video-react": "^0.15.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.5",
@@ -55,17 +57,24 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "chai": "^4.3.7",
     "css-loader": "^3.6.0",
     "css-minimizer-webpack-plugin": "^4.2.2",
+    "enzyme": "^3.11.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^6.10.3",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^7.0.4",
+    "husky": "^8.0.0",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "mocha": "^8.3.2",
     "node-polyfill-webpack-plugin": "^2.0.0",
     "prettier": "2.5.1",
+    "pretty-quick": "^3.1.3",
+    "react-test-renderer": "^18.2.0",
+    "regenerator-runtime": "^0.13.11",
     "style-loader": "^3.3.1",
+    "supertest": "^6.3.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-deadcode-plugin": "^0.1.17",
@@ -76,12 +85,13 @@
     "start:dev": "npm run dev",
     "build": "webpack --config webpack.prod.js",
     "format": "npx prettier --write .",
-    "lint": "npm run lint:client && npm run lint:server",
-    "lint:client": "eslint client/**/*.js",
-    "lint:server": "eslint server/**/*.js",
     "dev": "webpack --config webpack.dev.js && NODE_ENV=development node .",
     "prod": "webpack --config webpack.prod.js && NODE_ENV=development node .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "bin/post-install.sh",
+    "test": "npm run test:server; npm run test:client -- --watchAll=false",
+    "test:server": "mocha --exit",
+    "test:client": "echo 'No client tests yet'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -100,5 +110,9 @@
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
