--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-bootstrap": "^2.5.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-markdown-it": "^1.0.2",
     "react-masonry-component": "^6.3.0",
     "react-router-dom": "^5.3.3",
     "react-video-looper": "^1.0.16",
