--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "enzyme": "^3.11.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^6.10.3",
+    "glob": "^9.3.2",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "jest": "^29.5.0",
@@ -72,6 +73,7 @@
     "node-polyfill-webpack-plugin": "^2.0.0",
     "prettier": "2.5.1",
     "pretty-quick": "^3.1.3",
+    "purgecss-webpack-plugin": "^5.0.0",
     "react-test-renderer": "^18.2.0",
     "regenerator-runtime": "^0.13.11",
     "style-loader": "^3.3.1",
