--- a/package.json
+++ b/package.json
@@ -34,36 +34,32 @@
     "local-storage": "^1.4.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-device-detect": "^2.1.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-markdown-it": "^1.0.2",
-    "react-masonry-component": "^6.3.0",
     "react-router-dom": "^5.3.3",
-    "react-video-looper": "^1.0.16",
     "simple-json-db": "^1.2.3",
     "superagent": "^4.1.0",
-    "video-react": "^0.15.0"
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.21.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^9.1.2",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
     "chai": "^4.3.7",
     "css-loader": "^3.6.0",
     "css-minimizer-webpack-plugin": "^4.2.2",
-    "enzyme": "^3.11.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-react": "^7.32.2",
     "glob": "^9.3.2",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
@@ -74,7 +70,6 @@
     "prettier": "2.5.1",
     "pretty-quick": "^3.1.3",
     "purgecss-webpack-plugin": "^5.0.0",
-    "react-test-renderer": "^18.2.0",
     "regenerator-runtime": "^0.13.11",
     "style-loader": "^3.3.1",
     "supertest": "^6.3.3",
